[package]
name = "sa-token-storage-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database storage implementation for sa-token-rust (sqlx + PostgreSQL)"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
sa-token-adapter = { version = "0.1.18", path = "../sa-token-adapter" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "macros", "chrono"] }

[dev-dependencies]
sa-token-core = { version = "0.1.18", path = "../sa-token-core" }
